# SDIM

./: .gitignore  .premake5.lua.swp  CMakeLists.txt  License.txt  README.md  SDIM.sln  premake5.lua
FlexBisonFiles/: CMakeLists.txt  Readme.txt  SDIM.l  SDIM.output  SDIM.tab.cc  SDIM.tab.cpp  SDIM.y  lex.yy.cc
SDIMC/: CMakeLists.txt
SDIMC/src/: main.cpp
SDIMCommon/: CMakeLists.txt
SDIMCommon/include/: HashTable.hpp  Stack.hpp  Types.hpp  Utils.hpp  VariableStorage.hpp
SDIMCommon/src/: HashTable.cpp  Stack.cpp  Types.cpp  Utils.cpp  VariableStorage.cpp
SDIMCompiler/: CMakeLists.txt  Compiler.cpp  Compiler.vcxproj  Parser.cpp  SDIMCompiler.vcxproj  Scanner.cpp  Token.cpp  Token.hpp  TokenTree.cpp  TokenTree.hpp  Tokeniser.cpp  Tokeniser.hpp  Utils.cpp  Utils.hpp  main.cpp
SDIMCompiler/include/: BytecodeGenerator.hpp  Compiler.hpp  Expression.hpp  Generator.hpp  OperatorPrecedence.hpp  Parser.hpp  Scanner.hpp  ScopingBlock.hpp  Token.hpp
SDIMCompiler/src/: BytecodeGenerator.cpp  Compiler.cpp  Generator.cpp  LangUtils.cpp  OperatorPrecedence.cpp  Parser.cpp  Scanner.cpp  Token.cpp
SDIMVM/: CMakeLists.txt
SDIMVM/src/: main.cpp
SDIMVirtualMachine/: Allocator.cpp  CMakeLists.txt  Instructions.cpp  Instructions.hpp  SDIMVirtualMachine.vcxproj  Stack.cpp  Stack.hpp  Types.cpp  Types.hpp  Utils.cpp  Utils.hpp  VMState.cpp  VMState.hpp  VirtualMachine.cpp  VirtualMachine.hpp  VirtualMachine.vcxproj  main.cpp
SDIMVirtualMachine/include/: VMState.hpp  VirtualMachine.hpp
SDIMVirtualMachine/src/: Instructions.cpp  VMState.cpp  VirtualMachine.cpp
TestPrograms/: program.sdim
Testing/: TestResults.txt
Testing/SDIM/: Tests.ps1  hello_world.sdim
Testing/lua/: fibonacci.lua  hello_world.lua  is_prime.lua  tests.ps1
include/SDIMCommon/: Allocator.hpp  Stack.hpp  Types.hpp
include/SDIMCompiler/: BytecodeGenerator.hpp  Expression.hpp  Generator.hpp  ILCompiler.hpp  IRCompiler.hpp  OperatorPrecedence.hpp  Parser.hpp
include/SDIMVirtualMachine/: Instructions.hpp  VMState.hpp  VirtualMachine.hpp
src/SDIMC/: CMakeLists.txt  main.cpp
src/SDIMCommon/: CMakeLists.txt  Utils.cpp
src/SDIMCompiler/: CMakeLists.txt  Compiler.cpp  Expression.cpp  ILCompiler.cpp  IRCompiler.cpp  Parser.cpp  Scanner.cpp  ScopingBlock.cpp
src/SDIMVM/: CMakeLists.txt
src/SDIMVirtualMachine/: CMakeLists.txt  Instructions.cpp  VMState.cpp  VirtualMachine.cpp
